Fix bogus alignment in article meta info

--- a/assets/scss/main.sass
+++ b/assets/scss/main.sass
@@ -211,9 +211,6 @@ li
     margin-left: 0
     margin-top: 10px
 
-.article-meta
-  align-items: normal
-
 /* Fix github icon in footer
 .social-icon-outer
   width: auto
